--- a/Views/Subscriptions/Create.cshtml
+++ b/Views/Subscriptions/Create.cshtml
@@ -38,6 +38,11 @@
                 <span asp-validation-for="TotalNumberOfSessions" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Time" class="control-label"></label>
+                <select asp-for="Time" class="form-control" asp-items="Html.GetEnumSelectList<SubscriptionTime>()"></select>
+                <span asp-validation-for="Time" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TotalPrice" class="control-label"></label>
                 <input asp-for="TotalPrice" class="form-control" />
                 <span asp-validation-for="TotalPrice" class="text-danger"></span>
