--- a/Views/Subscriptions/Edit.cshtml
+++ b/Views/Subscriptions/Edit.cshtml
@@ -34,6 +34,13 @@
                 <span asp-validation-for="WeekFrequency" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Time" class="control-label"></label>
+                <select asp-for="Time" class="form-control" asp-items="Html.GetEnumSelectList<SubscriptionTime>()"></select>
+                <span asp-validation-for="Time" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-group">
                 <label asp-for="TotalNumberOfSessions" class="control-label"></label>
                 <input asp-for="TotalNumberOfSessions" class="form-control" />
                 <span asp-validation-for="TotalNumberOfSessions" class="text-danger"></span>
