--- a/Views/Subscriptions/Index.cshtml
+++ b/Views/Subscriptions/Index.cshtml
@@ -39,6 +39,9 @@
                 @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Time)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.IsDeleted)
             </th>
             <th></th>
@@ -65,6 +68,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TotalPrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Time)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.IsDeleted)
